force-app/main/default/objects/StopOver_Departure_Cities__c/StopOver_Departure_Cities__c.object-meta.xml
<CustomObject>
    <label>StopOver Departure City</label>
    <nameField>
        <displayFormat>Dept-{0000}</displayFormat>
        <label>StopOver Departure Cities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StopOver Departure Cities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>