force-app/main/default/objects/StopOver_Departure_Cities__c/fields/ordexp_Active__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>