force-app/main/default/objects/StopOver_Departure_Cities__c/fields/ordexp_departure_cities__c.field-meta.xml
<CustomField>
    <fullName>ordexp_departure_cities__c</fullName>
    <label>departure cities</label>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>StopOver Departure Cities</relationshipLabel>
    <relationshipName>StopOver_Departure_Cities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>