force-app/main/default/objects/StopOver_Departure_Cities__c/fields/ordexp_sub_stopover__c.field-meta.xml
<CustomField>
    <fullName>ordexp_sub_stopover__c</fullName>
    <label>sub stopover</label>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>StopOver Departure Cities</relationshipLabel>
    <relationshipName>StopOver_Departure_Cities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>