force-app/main/default/objects/StopOver_Departure_Cities__c/fields/ordexp_SubStopOver_Type__c.field-meta.xml
<CustomField>
    <fullName>ordexp_SubStopOver_Type__c</fullName>
    <formula>TEXT(ordexp_sub_stopover__r.type__c)</formula>
    <label>SubStopOver Type</label>
    <type>Text</type>
</CustomField>