force-app/main/default/objects/StopOver_Departure_Cities__c/fields/Sub_StopOver_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_StopOver_Name__c</fullName>
    <formula>ordexp_sub_stopover__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub StopOver Name</label>
    <type>Text</type>
</CustomField>