force-app/main/default/objects/StopOver_Departure_Cities__c/fields/UI_Name__c.field-meta.xml
<CustomField>
    <fullName>UI_Name__c</fullName>
    <formula>ordexp_sub_stopover__r.UI_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Name</label>
    <type>Text</type>
</CustomField>