force-app/main/default/objects/StopOver_Departure_Cities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ordexp_sub_stopover__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ordexp_departure_cities__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>